external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_4.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/suggestions/suggestion_4.move:3:28
  │
3 │     public fun call<T>(x: &Q::r::S, y: &T): (&Q::r::S, &T) { (x, y) }
  │                            ^
  │                            │
  │                            Could not resolve the name 'Q'
  │                            Did you mean: 'A'

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/suggestions/suggestion_4.move:3:47
  │
3 │     public fun call<T>(x: &Q::r::S, y: &T): (&Q::r::S, &T) { (x, y) }
  │                                               ^
  │                                               │
  │                                               Could not resolve the name 'Q'
  │                                               Did you mean: 'A'
